--- a/public/views/main.html
+++ b/public/views/main.html
@@ -6,6 +6,9 @@
 		<li>
 			<a href="/#/page">page</a>
 		</li>
+        <li>
+            <a href="/#/socket">socket</a>
+        </li>
 	</ul>
 </div>
 <div class="container" ng-controller="MainCtrl">
