--- a/public/views/page.html
+++ b/public/views/page.html
@@ -1,12 +1,15 @@
 <div>
-	<ul>
-		<li>
-			<a href="/">index</a>
-		</li>
-		<li>
-			<a href="/#/page">page</a>
-		</li>
-	</ul>
+    <ul>
+        <li>
+            <a href="/">index</a>
+        </li>
+        <li>
+            <a href="/#/page">page</a>
+        </li>
+        <li>
+            <a href="/#/socket">socket</a>
+        </li>
+    </ul>
 </div>
 <div class="container" ng-controller="PageCtrl">
 
