[modify] ルームjoin機能追加

--- a/public/views/sink.html
+++ b/public/views/sink.html
@@ -6,6 +6,7 @@
   <br/>
 
   <ul>
-    <li ng-bind="newRoomid">{{newRoomid}}</li>
+    <li ng-bind="roomid">{{roomid}}</li>
   </ul>
+	<p ng-bind="message">メッセージ：{{message}}</p>
 </div>
